# DataExchanger

./: .gitignore  CMakeLists.txt  README.md  StepToStl.cpp
CMake/: FindOpenCasCade.cmake
Models/: Box.step  Cylinder.step  Line.step
